Adicionando exercício de funções

--- a/Exercícios de Function - Exercicios 2.ipynb
+++ b/Exercícios de Function - Exercicios 2.ipynb
@@ -62,7 +62,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sua function aqui"
+    "\n",
+    "def calculo(lista_vendas):\n",
+    "  numerador=0\n",
+    "  denominador=0\n",
+    "  for venda in lista_vendas:\n",
+    "      valor,status,motivo = lista_vendas[venda]\n",
+    "      if status== \"Concluído\":\n",
+    "        denominador += valor\n",
+    "      elif status == \"Cancelado\" and motivo == 'Estoque em Falta':\n",
+    "          denominador += valor\n",
+    "          numerador +=  valor\n",
+    "  return (numerador/denominador)\n",
+    "\n",
+    "print(f'{calculo(vendas):.2%}')\n"
    ]
   },
   {
@@ -70,9 +83,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#rode sua function aqui com o dicionário dado para ver se ela está funcionando"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -103,7 +114,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sua function aqui"
+    "\n",
+    "def ClientesInadiplentes(lista_devedores):\n",
+    "  lista_inadiplentes=[]\n",
+    "  for cliente in lista_devedores:\n",
+    "      cpf,valor,dias = cliente\n",
+    "      if valor >= 1000 and dias > 20:\n",
+    "          lista_inadiplentes.append(cliente)\n",
+    "  return lista_inadiplentes\n",
+    "\n",
+    "print(ClientesInadiplentes(clientes_devedores))\n",
+    "print(len(ClientesInadiplentes(clientes_devedores)))"
    ]
   },
   {
@@ -111,9 +132,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#rode sua function aqui com a lista dada para ver se está funcionando"
-   ]
+   "source": []
   }
  ],
  "metadata": {
